# can-websocket-bridge

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  armv7_compile.sh  build.rs  generate_c.sh  index.html  log.mjs  setup_vcan.sh  start_webserver.sh  wrapper.h
bms_test/: index.html
bms_test/js/: client.js
bms_test/static/: style.css
dashboard/: index.html
dashboard/js/: client.js
dashboard/static/: style.css
gauges/: index.html
gauges/js/: client.js
gauges/static/: fonts.css  style.css
js/: client.js
src/: bindings.h  generate_rust.sh  lib.rs  main.rs
static/: style.css
