[package]
name = "can-websocket-bridge"
version = "0.1.0"
authors = ["williamzhang"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = ">=0.26.2"
serde = { version = ">=1.0", features = ["derive"] }
serde_json = ">=1.0.60"
tokio = { version = ">=1.2", features = ["full"] }
tokio-stream = ">=0.1.8"
tokio-socketcan = ">=0.2.0"
warp = ">=0.2"
log = ">=0.4"
pretty_env_logger = ">=0.3"
futures = ">=0.3"
