[package]
name = "can-websocket-bridge"
version = "0.2.1"
authors = ["williamzhang"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = ">=1.0.137", features = ["derive"] }
serde_json = ">=1.0.80"
tokio = { version = ">=1.18", features = ["full"] }
tokio-stream = ">=0.1.8"
tokio-socketcan = ">=0.3.0"
futures = ">=0.3.21"
warp = ">=0.3.2"
#pretty_env_logger = ">=0.3"

[build-dependencies]
cc = ">=1.0.73"
bindgen = ">=0.60.0"
